# GameEngine

./: .gitignore  CMakeLists.txt  README.md
include/game_engine/: Backend.h  GameEngine.h
include/game_engine/backend/opengl/: init.h
include/game_engine/gui/: GUI.h  GUIEvent.h  Window.h
include/game_engine/platform/: Window.h  full.h
include/game_engine/platform/drawin/: constants.h
include/game_engine/platform/linux/: constants.h
include/game_engine/platform/win32/: WindowHandle.h  constants.h
include/game_engine/utils/: export.h
src/: Backend.cpp  GameEngine.cpp
src/backend/: Backend.cpp
src/backend/directx/: main.cpp
src/backend/metal/: main.cpp
src/backend/opengl/: main.cpp
src/backend/vulkan/: main.cpp
src/gui/: GUI.cpp  GUIEvent.cpp  Window.cpp
src/platform/: Window.cpp
src/platform/win32/: WindowHandle.cpp
src/platform/win32/opengl/: init.cpp
